day-two-kubernetes/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-webapi-deployment
  namespace: demo
  labels:
    app: demo-webapi
spec:
  selector:
    matchLabels:
      app: demo-webapi-deployment
  template:
    metadata:
      labels:
        app: demo-webapi-deployment
    spec:
      securityContext: # user and group id to execute docker image if specific user to execute
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: demo-webapi-deployment
          image: demo-webapi:latest
          imagePullPolicy: IfNotPresent # policy to download docker image
          resources: #limit to execute docker
            limits:
              memory: "256Mi"
              cpu: "256m"
          ports:
            - containerPort: 443
          volumeMounts:
            - name: demo-webapi-appsetting
              mountPath: /app/appsettings.Production.json
              subPath: appsettings.Production.json
              readOnly: true
            - name: demo-webapi-cert
              mountPath: /secrets/tls-cert
              readOnly: true
      volumes:
        - name: demo-webapi-appsetting
          secret:
            secretName: dedemo-webapi-production-appsetting
        - name: demo-webapi-cert
          secret:
            secretName: demo-webapi-cert
