day-two-kubernetes/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-webapi-service
  namespace: demo
  labels:
    app: demo-webapi-deployment
spec:
  selector:
    app: demo-webapi-deployment
  ports:
  - port: 8000
    targetPort: 8080
